--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 
   <!-- PDF.js (text extraction) -->
-  <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@4.10.38/build/pdf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@4.10.38/legacy/build/pdf.min.js"></script>
 
   <!-- pdf-lib (PDF generation) -->
   <script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
