--- a/index.html
+++ b/index.html
@@ -4,27 +4,85 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PDF → Sideways Text PDF</title>
+
   <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 24px; line-height: 1.4; }
-    .card { max-width: 820px; border: 1px solid #ddd; border-radius: 12px; padding: 18px; }
-    h1 { margin: 0 0 6px 0; font-size: 20px; }
-    p { margin: 8px 0; }
-    input, button, select { font-size: 14px; padding: 8px 10px; }
-    .row { display: flex; gap: 10px; flex-wrap: wrap; align-items: center; margin: 12px 0; }
-    .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace; font-size: 13px; }
-    .status { white-space: pre-wrap; background: #f7f7f7; border: 1px solid #e5e5e5; border-radius: 10px; padding: 10px; }
+    :root { color-scheme: light; }
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      margin: 24px;
+      line-height: 1.4;
+      background: #ffffff;
+      color: #111;
+    }
+    .card {
+      max-width: 980px;
+      border: 1px solid #ddd;
+      border-radius: 14px;
+      padding: 20px;
+      box-shadow: 0 1px 0 rgba(0,0,0,0.03);
+    }
+    h1 { margin: 0 0 6px 0; font-size: 28px; }
+    p { margin: 10px 0; font-size: 18px; }
+    .row {
+      display: flex;
+      gap: 14px;
+      flex-wrap: wrap;
+      align-items: center;
+      margin: 14px 0;
+    }
+    label { font-size: 18px; }
+    input[type="file"] { font-size: 16px; }
+    select, button {
+      font-size: 16px;
+      padding: 8px 12px;
+      border: 1px solid #bbb;
+      border-radius: 8px;
+      background: #fff;
+    }
+    button {
+      cursor: pointer;
+      border-color: #999;
+      background: #f5f5f5;
+    }
+    button:disabled {
+      cursor: not-allowed;
+      opacity: 0.6;
+    }
+    .tip {
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
+      font-size: 16px;
+      margin-top: 8px;
+    }
+    .status {
+      white-space: pre-wrap;
+      background: #f7f7f7;
+      border: 1px solid #e5e5e5;
+      border-radius: 12px;
+      padding: 14px;
+      margin-top: 14px;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
+      font-size: 15px;
+    }
+    .small { font-size: 14px; color: #333; }
   </style>
 
-  <!-- PDF.js (text extraction) -->
-  <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@4.10.38/legacy/build/pdf.min.js"></script>
+  <!-- PDF.js (stable legacy build that exposes global `pdfjsLib`) -->
+  <script defer src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.11.174/legacy/build/pdf.min.js"></script>
 
   <!-- pdf-lib (PDF generation) -->
-  <script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
+
+  <!-- Your logic -->
+  <script defer src="./script.js"></script>
 </head>
+
 <body>
   <div class="card">
     <h1>PDF → Sideways Text PDF (Binder-friendly)</h1>
-    <p>Upload a PDF. This will extract text and create a new PDF where the text is rotated 90° so you can print it and put it in a top-opening binder.</p>
+    <p>
+      Upload a PDF. This extracts the text and creates a new PDF where the text is rotated 90°
+      so you can print it and use it in a top-opening binder.
+    </p>
 
     <div class="row">
       <input id="file" type="file" accept="application/pdf" />
@@ -32,13 +90,13 @@
     </div>
 
     <div class="row">
-      <label>Direction:</label>
+      <label for="direction">Direction:</label>
       <select id="direction">
         <option value="ccw" selected>90° counterclockwise (recommended)</option>
         <option value="cw">90° clockwise</option>
       </select>
 
-      <label>Font size:</label>
+      <label for="fontsize">Font size:</label>
       <select id="fontsize">
         <option>9</option>
         <option selected>10</option>
@@ -46,7 +104,7 @@
         <option>12</option>
       </select>
 
-      <label>Line spacing:</label>
+      <label for="leading">Line spacing:</label>
       <select id="leading">
         <option>11</option>
         <option selected>12</option>
@@ -55,11 +113,15 @@
       </select>
     </div>
 
-    <p class="mono">Tip: If your output has weird spacing, bump font size down to 9 or increase line spacing.</p>
+    <div class="tip">
+      Tip: If your output has weird spacing, try font size 9 or increase line spacing.
+    </div>
+    <div class="small">
+      If the button stays gray after selecting a PDF, open DevTools (F12) → Console and look for red errors.
+    </div>
 
-    <div class="status mono" id="status">Choose a PDF to start.</div>
+    <div class="status" id="status">Choose a PDF to start.</div>
   </div>
-
-  <script src="./script.js"></script>
 </body>
 </html>
+
